[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/sprites/backgroundfinal.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/characterfinal.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/wifefinal.png" type="Texture" id=3]
[ext_resource path="res://Scripts/FinalScene.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Dialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/characterfinalexpsad.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/characterfinalexphappy.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/characterfinalexpworried.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/wifeexphappy.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/wifeexpneutral.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/wifeexpsad.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/wifeexpangry.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/characterfinalexpneutral.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/wifeexpcry.png" type="Texture" id=14]
[ext_resource path="res://Sounds/FinalScene-Melancholic Walk (128 kbps).mp3" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "Intro"
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 79, 384 ), Vector2( 626, 407 ), Vector2( 626, 424 ), Vector2( 618, 390 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.63432, 1.63432, 3.67559, -0.835056 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Wife:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1114, 388 ), Vector2( 641.25, 375.828 ), Vector2( 633, 380 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Wife:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -3.05672, -3.05672, -3.8037, -2.66026 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 626, 401 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Wife:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 641.25, 366.828 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Wife:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 644.889, 363 )
scale = Vector2( 0.675926, 0.675926 )
texture = ExtResource( 1 )

[node name="Character" type="Sprite" parent="."]
position = Vector2( 626, 401 )
scale = Vector2( 0.623148, 0.623148 )
texture = ExtResource( 2 )

[node name="Wife" type="Sprite" parent="."]
position = Vector2( 641.25, 366.828 )
scale = Vector2( 0.700781, 0.700781 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Intro = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="DialogBox" parent="." instance=ExtResource( 5 )]

[node name="CharacterNeutral" type="Sprite" parent="."]
visible = false
position = Vector2( 642, 396 )
scale = Vector2( 0.695602, 0.695602 )
texture = ExtResource( 13 )

[node name="CharacterHappy" type="Sprite" parent="."]
visible = false
position = Vector2( 616, 407 )
scale = Vector2( 0.650926, 0.650926 )
texture = ExtResource( 7 )

[node name="CharacterSad" type="Sprite" parent="."]
visible = false
position = Vector2( 655, 404 )
scale = Vector2( 0.752778, 0.752778 )
texture = ExtResource( 6 )

[node name="CharacterWorried" type="Sprite" parent="."]
visible = false
position = Vector2( 628.444, 403.25 )
scale = Vector2( 0.651389, 0.651389 )
texture = ExtResource( 8 )

[node name="WifeHappy" type="Sprite" parent="."]
visible = false
position = Vector2( 592.889, 373.75 )
scale = Vector2( 0.794907, 0.794907 )
texture = ExtResource( 9 )

[node name="WifeNeutral" type="Sprite" parent="."]
visible = false
position = Vector2( 599, 375 )
scale = Vector2( 0.782176, 0.782176 )
texture = ExtResource( 10 )

[node name="WifeSad" type="Sprite" parent="."]
visible = false
position = Vector2( 593.445, 375.5 )
scale = Vector2( 0.789815, 0.789815 )
texture = ExtResource( 11 )

[node name="WifeAngry" type="Sprite" parent="."]
visible = false
position = Vector2( 617, 375 )
scale = Vector2( 0.7375, 0.7375 )
texture = ExtResource( 12 )

[node name="WifeCry" type="Sprite" parent="."]
visible = false
position = Vector2( 624, 373 )
rotation = -0.0143174
scale = Vector2( 0.733167, 0.733167 )
texture = ExtResource( 14 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = 5.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="next" from="DialogBox" to="." method="_on_DialogBox_next"]
